--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>aflevering 13/11</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>velkommen!</h1>
+
+<script src="main.js"></script>
 </body>
 </html>
