andet push --> mangler stadig graf 2

--- a/index.html
+++ b/index.html
@@ -12,48 +12,54 @@
 <body>
 
 <header>
-
-<h3>CHINOOK</h3>
-
+    <div class="nav-container">
+        <svg width="46" height="46" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+             stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M9 18V5l12-2v13"></path>
+            <path d="M6 15a3 3 0 1 0 0 6 3 3 0 1 0 0-6z"></path>
+            <path d="M18 13a3 3 0 1 0 0 6 3 3 0 1 0 0-6z"></path>
+            <!--kildehenvisning til icon: https://iconer.app/feather/-->
+        </svg>
+    </div>
+    <h3>CHINOOK</h3>
 </header>
 
 <main>
 
-    <!--Overskift-->
-    <h1>CHINOOK</h1>
+    <h1>CHINOOK MUSIC</h1>
 
-    <!--canvas, graf1--->
-    <div>
-        <canvas1 id="chart"></canvas1>
-    </div>
-    <!--canvas, graf2--->
-    <div>
-        <canvas2 id="chart"></canvas2>
-    </div>
-
-    <!-- Sektion 1 -->
-    <section class="graf-sektion">
-        <div class="tekst">
+    <!-- SEKTION 1 -->
+    <section class="genre">
+        <div class="text-genre">
             <h2>Top 10 mest købte genrer</h2>
-            <p>hvilke musikgenrer der bliver købt mest i butikken.</p>
+            <p>Hvilke musikgenrer der bliver købt mest i butikken.</p>
         </div>
-        <div class="graf-container">
+
+        <div class="chart-genre">
             <canvas id="chart1"></canvas>
         </div>
     </section>
 
-    <section class="graf-sektion reverse">
-        <div class="graf-container">
+    <!-- SEKTION 2 -->
+    <section class="tracks">
+        <div class="text-tracks">
+            <h2>Anden graf</h2>
+            <p>Denne graf viser f.eks. fordelingen af salg pr. måned.</p>
+        </div>
+
+        <div class="chart-tracks">
             <canvas id="chart2"></canvas>
         </div>
-        <div class="tekst">
-            <h2>Anden graf</h2>
-            <p>Denne graf viser...</p>
-        </div>
     </section>
-
 </main>
 
+<footer>
+
+</footer>
+
+
+
+<!-- Forbinder til JavaScript-filen, som laver graferne -->
 <script src="main.js"></script>
 </body>
 </html>
