fjerde push --> mangler stadig graf 2 og tekst

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>aflevering 13/11</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icons8-musical-note-30.png" sizes="32x32" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2"></script>
 </head>
@@ -20,8 +21,12 @@
             <path d="M18 13a3 3 0 1 0 0 6 3 3 0 1 0 0-6z"></path>
             <!--kildehenvisning til icon: https://iconer.app/feather/-->
         </svg>
+        <h3>CHINOOK</h3>
     </div>
-    <h3>CHINOOK</h3>
+
+
+    <a rel="login" href="login.html">Login</a> <!--*note: link til at gå tilbage til login hjemmeside-->
+
 </header>
 
 <main>
@@ -54,7 +59,14 @@
 </main>
 
 <footer>
-
+    <div>
+        <h3>Informationer</h3>
+        <ul>
+            <li>Storm Dyva Touborg |<span>stto1000@stud.ek.dk</span></li>
+            <li>Mathias Hartung Borup |<span>mabo0015@stud.ek.dk</span></li>
+            <li>Astrid Sofie Falkenberg |<span>asfa0002@stud.ek.dk</span></li>
+        </ul>
+    </div>
 </footer>
 
 
