--- a/app.html
+++ b/app.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="chart-tracks">
-            <canvas id="chart2"></canvas>
+            <canvas id="chart2" width="800" height="650"></canvas> <!--*note: få grafen større-->
         </div>
     </section>
 </main>
