--- a/app.html
+++ b/app.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>aflevering 13/11</title>
+    <title>CHINOOK</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icons8-musical-note-30.png" sizes="32x32" type="image/png">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
