--- a/app.html
+++ b/app.html
@@ -62,7 +62,7 @@
     <div>
         <h3>Informationer</h3>
         <ul>
-            <li>Storm Dyva Touborg |<span>stto1000@stud.ek.dk</span></li>
+            <li>Storm Dyva Toubro |<span>stto1000@stud.ek.dk</span></li>
             <li>Mathias Hartung Borup |<span>mabo0015@stud.ek.dk</span></li>
             <li>Astrid Sofie Falkenberg |<span>asfa0002@stud.ek.dk</span></li>
         </ul>
