--- a/index.html
+++ b/index.html
@@ -13,27 +13,20 @@
 <form action="action_page.php" method="POST">
 
     <div>
-        <label for="fname">First name</label>
-        <input type="name" id="fname" name="fname" required>
+        <label for="ename">Employee ID</label>
+        <input type="name" id="ename" name="ename" maxlength="8" required>
     </div>
 
 
     <div>
-        <label for="lname">Last name</label>
-        <input type="name" id="lname" name="lname" required>
+        <label for="fname">Full name</label>
+        <input type="name" id="fname" name="fname" required>
     </div>
 
     <div>
         <label for="email">E-mail</label>
         <input type="email" id="email" name="email" required>
     </div>
-
-
-    <div>
-        <label for="bdate">Birthdate</label>
-        <input type="date" id="bdate" name="bdate" required>
-    </div>
-
 
     <div>
         <label for="pass">Password</label>
