Change input type for Employee ID to number

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div>
         <label for="ename">Employee ID</label>
-        <input type="name" id="ename" name="ename" maxlength="8" required>
+        <input type="number" id="ename" name="ename" maxlength="8" required>
     </div>
 
 
