--- a/app.html
+++ b/app.html
@@ -60,7 +60,7 @@
     <!-- SEKTION 2 -->
     <section class="tracks">
         <div class="text-tracks">
-            <h2>Slag fordelt på lande</h2>
+            <h2>Salg fordelt på lande</h2>
             <p>Denne graf viser, hvor vores salg kommer fra geografisk.
                 <br>
                 <br>
